--- a/src/site.ejs
+++ b/src/site.ejs
@@ -224,7 +224,7 @@
                 <div class="flex flex-col md:flex-row flex-grow-0 flex-shrink-0 basis-[60%] md:relative justify-center items-center gap-4 z-10 mb-10 md:m-0 lg:mb-0">
                     <img class="w-full sm:w-4/5 sm:h-3/4 md:h-full rounded-3xl" src="image/kolac-krabice.jpg" alt="">
                     <div class="flex md:absolute justify-center z-10 md:m-0 lg:mb-0 bottom-[-60px] right-[-40px]">
-                        <img class="w-full sm:w-4/5 sm:h-3/4 md:w-[280px] md:h-full rounded-3xl" src="image/kolac.jpg" alt="">
+                        <img class="w-full sm:w-4/5 sm:h-3/4 md:w-[280px] lg:w-[350px] md:h-full rounded-3xl" src="image/kolac.jpg" alt="">
                     </div>
                 </div>
                 <!-- CONTENT -->
